Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
See the end for copying conditions.

* Version 0.0.34 (unreleased)

** Use gettext 0.17.

** Update gnulib files.

* Version 0.0.33 (released 2007-09-14)

** libpam_shishi: Don't echo password when reading it from console.
Reported by Jack Bates <ms419@freezone.co.uk>.

** libpam_shishi: Save read password in PAM library for other modules.
Reported by Jack Bates <ms419@freezone.co.uk>.

** Update translations.

* Version 0.0.32 (released 2007-06-29)

** Shishi is now licensed under the GPL version 3 or later.

** Remove extra/inetutils.diff since the patch has been merged into InetUtils.

** Update gnulib files.

* Version 0.0.31 (released 2007-06-11)

** Shishi is now developed using Git instead of CVS.
A public git mirror is available from
<http://repo.or.cz/w/shishi.git>.

** Verify the KDC's certificate against a CA certificate in the client.
The CA is by default stored in ~/.shishi/client.ca in PEM format.
Suggested by Alberto Fondi <alberto.fondi@lnf.infn.it>.

** Update gnulib files.

* Version 0.0.30 (released 2006-11-01)

** Update STARTTLS extension to match latest drafts.
Shishi now implements draft-josefsson-krb-tcp-expansion-02.txt and
draft-josefsson-kerberos5-starttls-02.txt.

** Fix failure when reading large integers from ASN.1 structure.
This can manifest itself by giving error messages such as 'Replay
protection value (nonce) differ between request and reply.'.  Added a
new self test "nonce" to detect errors in these routines.  Reported by
Alberto Fondi.

* Version 0.0.29 (released 2006-11-01)

** Add man page for ccache2shishi.

* Version 0.0.28 (released 2006-11-01)

** New command line tool "ccache2shishi".
The tool will read tickets from /tmp/krb5cc_UID (by default) and will
write them to ~/.shishi/tickets.

** A description of the ccache file format were added in doc/ccache.txt.
