@@ -1,8 +1,10 @@
 Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 * Version 0.0.34 (unreleased)
+
+** When built under MinGW, generate a libshishi-XX.def using -Wl,--output-def.
 
 ** Use gettext 0.17.
 
